<resources>
    <string name="app_name">TAMU Hack Airlines</string>
    <string name="action_settings">Settings</string>
    <string name="loggedInUserDisplay" />
    <string name="hint_email">janedoe@example.com</string>
    <string name="hint_password">P@ssword!23</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_login">Login</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_signup">Sign Up</string>
</resources>
